# storageanalyser

./: .gitignore  LICENSE  README.md  diskanalyser_original.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.md  usage.md  web.md
src/storageanalyser/: __init__.py  analyzer.py  cache.py  cli.py  constants.py  database.py  gdrive.py  helpers.py  models.py  platform.py  report.py
src/storageanalyser/web/: __init__.py  scan_manager.py  server.py
src/storageanalyser/web/static/: app.css  app.js  dedup.js  gdrive.js
src/storageanalyser/web/templates/: index.html
tasks/: __init__.py  docs.py  test.py  web.py
tests/: test_analyzer.py  test_cache.py  test_database.py  test_gdrive.py  test_helpers.py  test_models.py  test_web.py
