[project]
name = "storageanalyser"
version = "0.1.0"
description = "macOS Storage Analyzer & Cleanup Recommender"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.1",
    "google-auth-oauthlib>=1.0",
]

[project.scripts]
storageanalyser = "storageanalyser.cli:main"
storageanalyser-web = "storageanalyser.web.server:run"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "invoke",
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
    "shot-scraper",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storageanalyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
