[project]
name = "storageanalyser"
version = "0.1.3"
description = "Storage Analyzer & Cleanup Recommender"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Joe Drumgoole", email = "joe@joedrumgoole.com"},
]
keywords = ["disk", "storage", "analyzer", "cleanup", "macos", "windows", "duplicate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.1",
    "google-auth-oauthlib>=1.0",
]

[project.urls]
Homepage = "https://github.com/jdrumgoole/storageanalyser"
Documentation = "https://storageanalyser.readthedocs.io/"
Repository = "https://github.com/jdrumgoole/storageanalyser"
Issues = "https://github.com/jdrumgoole/storageanalyser/issues"

[project.scripts]
storageanalyser = "storageanalyser.cli:main"
storageanalyser-web = "storageanalyser.web.server:run"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "invoke",
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
    "shot-scraper",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storageanalyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
